--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,6 +16,9 @@
 		"@grpc/proto-loader": "^0.7.10",
 		"@prisma/client": "^6.3.1",
 		"@types/bull": "^4.10.4",
+		"@types/glob": "^8.1.0",
+		"@types/mime-types": "^2.1.4",
+		"@types/node-cron": "^3.0.11",
 		"ajv": "^8.12.0",
 		"ajv-formats": "^2.1.1",
 		"axios": "^1.7.9",
@@ -25,7 +28,11 @@
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"express-validator": "^7.0.1",
+		"glob": "^10.4.5",
+		"glob-promise": "^6.0.7",
 		"jsonwebtoken": "^9.0.2",
+		"mime-types": "^2.1.35",
+		"node-cron": "^3.0.3",
 		"prisma": "^6.3.1",
 		"ts-proto": "^1.181.2",
 		"uuid": "^9.0.1"
