--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -34,7 +34,8 @@
     "react-router-dom": "^6.22.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "date-fns": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
