--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,14 +9,16 @@
 		"build": "tsc",
 		"test": "jest",
 		"lint": "eslint src/**/*.ts",
-		"proto": "protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=src/proto --ts_proto_opt=esModuleInterop=true,outputServices=grpc-js,env=node proto/engine.proto"
+		"proto": "protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=src/proto --ts_proto_opt=esModuleInterop=true,outputServices=grpc-js,env=node proto/engine.proto",
+		"apply-migration": "node apply-migration.js",
+		"drop-constraint": "npx prisma db execute --file ./prisma/drop-constraint.sql"
 	},
 	"dependencies": {
 		"@aws-sdk/client-ec2": "^3.756.0",
 		"@grpc/grpc-js": "^1.12.6",
 		"@grpc/proto-loader": "^0.7.10",
 		"@octokit/rest": "^21.1.1",
-		"@prisma/client": "^6.3.1",
+		"@prisma/client": "^6.4.1",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/bull": "^4.10.4",
 		"@types/jsonwebtoken": "^9.0.9",
