Fixed server running

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,9 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"type": "module",
+	"engines": {
+		"node": "20.x"
+	},
 	"scripts": {
 		"start": "node dist/index.js",
-		"dev": "NODE_OPTIONS='--loader ts-node/esm' nodemon src/index.ts",
+		"dev": "NODE_OPTIONS='--loader ts-node/esm' nodemon src/server.ts",
 		"build": "tsc",
 		"test": "NODE_OPTIONS='--experimental-vm-modules' jest --config jest.config.js --forceExit",
 		"test:force-exit": "FORCE_EXIT_TESTS=true NODE_OPTIONS='--experimental-vm-modules' jest --config jest.config.js --forceExit",
