--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -25,6 +25,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@stripe/react-stripe-js": "^3.4.0",
+    "@stripe/stripe-js": "^6.0.0",
     "@types/axios": "^0.9.36",
     "@types/react-helmet": "^6.1.11",
     "axios": "^1.6.7",
